--- a/css/templatemo-video-catalog.css
+++ b/css/templatemo-video-catalog.css
@@ -801,3 +801,24 @@ video {
         min-width: 196px;
     }
 }
+
+#gotoTopBtn {
+  display: none;
+  position: fixed;
+  bottom: 15px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #29BBCC;
+  opacity: 0.5;
+  color: white;
+  cursor: pointer;
+  padding: 5px 20px;
+  border-radius: 15px;
+}
+
+#gotoTopBtn:hover {
+  background-color: #555;
+}
